# uh_pathfinder_frontend

./: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  presentation.md  quickstart.md  test_skills_assessment.html
data/data_scrapers/: clean_pages.py  embed_response.html  example_google_presentation_page.html  example_page.html  hawaii_career_pathways_build.py  hi_careers_pages.json  hi_careers_sitemap.json  root_links.json  site_discover.py  slides_extractor.py
data_pipeline/: README.md  hi_careers_knowledge_graph.json  ingest_corpus.py  pyproject.toml  skills.xlsx
data_pipeline/dev_tests/: onet_request.py
data_pipeline/onet_sql_scripts/: 01_content_model_reference.sql  08_survey_booklet_locations.sql  13_interests.sql  21_work_styles.sql  22_work_values.sql  24_dwa_reference.sql  25_tasks_to_dwas.sql  26_emerging_tasks.sql  27_related_occupations.sql  28_unspsc_reference.sql  30_sample_of_reported_titles.sql  33_abilities_to_work_activities.sql  34_abilities_to_work_context.sql  35_skills_to_work_activities.sql  36_skills_to_work_context.sql  37_riasec_keywords.sql  38_basic_interests_to_riasec.sql  39_interests_illus_activities.sql  40_interests_illus_occupations.sql  Read Me.txt
data_pipeline/storage_scripts/: rag_onet_demo.py
docs/: OCCUPATION_PROGRAMS_INTEGRATION.md
docs/decisions/: 001-deployment-strategy.md  003-skills-matching-retrieval.md  004-interest-matching-strategy.md  005-db-model-schema-strategy.md  005-occupation-program-association-strategy.md  006-occupation-program-digestion.md  (+1 more)
public/: _redirects
src/: App.tsx
(+23 files in other folders)
