[project]
name = "uh-pathfinder"
version = "0.1.0"
description = "UH Pathfinder AI: Dream Job to UH Pathways – HACC 2025 + GenAI Stack Demo"
readme = "README.md"
authors = [{ name = "Sadie Flick" }]
requires-python = ">=3.10"

dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "chromadb>=0.5.0",
    "beautifulsoup4",
    "requests",
    "tiktoken",
    "streamlit>=1.37.0",
    "openai>=1.40.0",
    "python-dotenv",
    "playwright>=1.55.0",
]

[tool.uv]
managed = true

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
